k8s/playground/eks/aws-lbc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-metric-app 
  namespace: demo 
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:700615263313:certificate/9d4efcac-060b-4333-8eba-2a329fb7c35d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health 
spec:
  ingressClassName: alb
  rules:
    - host: demo.high10hunter.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-metric-app 
                port:
                  number: 7070
